--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tweetdeck-desktop",
   "productName": "Tweetdeck",
   "desktopName": "Tweetdeck",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Unofficial Tweetdeck desktop app",
   "license": "MIT",
   "repository": "mikebell/tweetdeck-desktop",
@@ -16,7 +16,7 @@
   },
   "electronVersion": "0.34.3",
   "scripts": {
-    "test": "xo --space",
+    "test": "xo --fix --space",
     "start": "electron .",
     "build": "npm run build:linux && npm run build:windows",
     "build:linux": "electron-packager . --overwrite --out=dist --prune --platform=linux --arch=x64 --icon=static/Icon.png --app-bundle-id=com.mikebell.Tweetdeck-desktop --app-version=$npm_package_version && cd dist/Tweetdeck-linux-x64/ && zip -ryq9 ../Tweetdeck-linux-${npm_package_version}.zip *",
@@ -42,8 +42,8 @@
     "electron-window-state": "^4.1.0"
   },
   "devDependencies": {
-    "electron-packager": "^8.0.0",
     "electron": "^1.0.1",
+    "electron-packager": "^13.1.1",
     "xo": "*"
   },
   "xo": {
